CSS/main.css
/********************/
/* Basic Component  */
/********************/

body
{
  background-color:#191a22 ;
}

a 
{
  color: white;
}

label
{
  padding-top: -10%;
}

#matrixCanvas
{
  display: none; /* initially hidden */
}

.illegalcommand
{
  color: rgb(165, 78, 7);
}

.cmd
{
  color: rgb(221, 221, 18);
}

.command
{
  color: rgb(10, 96, 146);
}

.hero
{
  color:rgb(255, 191, 0);
  font-weight: 700;
}


.about {
  position: relative;
  width: 60%;
  left: 0;
  /* padding-right: 14%; Creates spacing from the right */
}

@media (max-width: 950px) {
  .about {
    width: 90%;
    margin-right: 5%;
    padding-right: 5%;
  }
}




.portrait
{
  position: absolute;
  left: 60%;
  white-space: pre;   
  top: 0;
  line-height: 1.2;   
  font-weight: 700;
  font-size: 1rem;
}

@media (max-width: 920px) {
  .portrait {
    position: relative; 
    margin: 0 auto;
    white-space: pre;  
    top:0;
    left: 0%;
    text-align: center;
    font-size: .8rem; 
    font-stretch:narrower;
  }
}

.prmt1
{
  color: rgb(170, 103, 52);
}

.prmt2
{
  color: rgb(52, 143, 170);
}


/*****************/
/* Project List  */
/*****************/
  .proj
  {
  /* top:-2em; */
  font-weight: 700;
  font-size: 1.2em;
  }

  .proj .title 
  {
    font-family: monospace;
    font-weight: bold;   /* make title bolder */
    position: relative;
    left:1%;
  }

  .proj .disc 
  {
    font-family: monospace;
    position: relative;
    top:-3em;
    left:2%;
  }

@media screen and (min-width: 768px) {
  .theme-default .proj .disc,
  .theme-sql .proj .disc,
  .theme-ubuntu .proj .disc,
  .theme-matrix .proj .disc,
  .theme-white .proj .disc,
  .theme-terminal .proj .disc {
    max-width: 60vw;
    font-family: monospace;
  }
}


  /*///////////// */
 /* Download bar */
/*///////////// */
  .filename {
    font-weight: bold;
    color: #ccc;
  }

  .progress-container {
    background-color: #111;
    border: 1px solid #333;
    border-radius: 3px;
    height: 10px;
    width: 500px;
    margin: 5px 0;
    overflow: hidden;
  }

  .progress-bar  {
    height: 100%;
    background-color: #79ff4d; /* neon green */
    width: 0%; /* will animate */
    animation: load 2s ease-in-out;
  }

  @keyframes load {
    0%   { width: 0%; }
    10%  { width: 5%; }
    40%  { width: 50%; }
    70%  { width: 80%; }
    90%  { width: 95%; }
    100% { width: 100%; }
  }

  .green {
    color: #79ff4d;
    margin-right: 10px;
  }

  .red {
    color: #ff4d4d;
    margin-right: 10px;
  }

  .dim {
    color: #888;
  }

  /**************/
 /* Hack theme */
/**************/
  .theme-hack
  {
    background-color: #000000;
    --xt-bg:#000000;
    --xt-fg: #03b903;
  }

  .theme-hack .xt>.xt-stdout>.xt-cursor 
  {
    color: var(--xt-fg);
  }


  /*****************/
 /* Default Theme */
/*****************/
  .theme-default
  {
    --xt-bg:#191a22;
    --xt-fg:rgb(255, 255, 255);
  }

  .theme-default body 
  {
    background-color:#191a22;
  }

  .theme-default .help                          /* help tag */                            
  {
    color: rgb(221, 221, 18);
  }

  .theme-default .command                      /* help command name */
  {
    color: rgb(255, 255, 255);
  }

  .theme-default .discription                  /* help command discription */
  {
    color: rgb(192, 192, 192);
  }

  .theme-default .hero                         /* hero section */
  {
    color:rgb(255, 255, 255);
    font-weight: 700;
  }

  .theme-default .portrait                         /* hero section */
  {
    color:rgb(255, 255, 255);
  }

  .theme-default .prmt1                          /* prompt part1 */
  {
    color: rgb(192, 192, 192);
  }

  .theme-default .prmt2                          /* prompt part2 */
  {
    color: rgb(52, 143, 170);
  }

  .theme-default .edu .header1 {
    color: rgb(52, 143, 170);     /* Same as .prmt2 for consistency */
    font-weight: 800;
    text-transform: uppercase;
  }

  .theme-default .edu .header2 {
    color: rgb(192, 192, 192);    /* Matches .discription and .prmt1 */
    font-weight: 600;
  }

  .theme-default .socials .social-header {
    text-transform: uppercase;
    color: rgb(52, 143, 170);
    font-weight: 800;
  }

  .theme-default .socials .social-label {
    text-transform: uppercase;
    color: rgb(192, 192, 192);
    font-weight: 600;
  }

  .theme-default .proj .title {
    color: rgb(52, 143, 170);
    display: block;
  }

  .theme-default .proj .disc {
    color: rgb(192, 192, 192);
    font-weight: 500;
    margin: 0 0 0 1em; /* only left indent */
    padding: 0;
    display: block;
    line-height: 1.4;
    word-wrap: break-word;
  }

  .theme-default .ProjectDetailed .title {
    color: rgb(52, 143, 170);
    font-weight: 700;
    /* display: block; */
  }

  .theme-default .ProjectDetailed .subtitle {
    display: block;
    color: rgb(52, 143, 170); /* Same as .prmt2 */
    font-weight: 600;
  }

  .theme-default .ProjectDetailed .disc {
    color: rgb(192, 192, 192);
    font-weight: 500;
    margin-left: 1em;
    line-height: 1.4;
    white-space: pre-line;
  }

  .theme-default .ProjectDetailed .demo-link {
    color: rgb(192, 192, 192);
    text-decoration: underline;
  }


  /*****************/
 /*   SQL Theme   */
/*****************/
  .theme-sql 
  {
    background-color: #010114;
    --xt-bg: #010114;  /* Navy Blue Background */
    --xt-fg: #f5f5ee;  /* Yellow Text */
    --xt-cursor: #f5f5ee; /* Orange Cursor */
    --xt-error: #FF0000; /* Red for errors */
    --xt-font-family: "Consolas", "Courier New", monospace; 
  }

  .theme-sql .xt>.xt-stdout>.xt-cursor {
    border: none;
    border-bottom: 5px solid var(--xt-fg);
    background: transparent;
    color: var(--xt-fg);
    display: inline;
    line-height: 1;
  }

  .theme-sql .help                          /* help tag */                            
  {
    color: rgb(221, 221, 18);
  }

  .theme-sql .command                      /* help command name */
  {
    color: rgb(255, 255, 255);
  }
/* ... */

